# autonomy-control

./: A Hybrid Quantum-Classical Cognitive Simulation Using the Autonomy Control Key Ω Equation  CODEX.txt  Dockerfile  LICENSE  README.md  README.txt  __init__.py  agent_runner.py  api_clients.py  knowledge_base.py  learning.py  omega_agent.py  omega_control.py  parameters.py  pyproject.toml  setup.py
omega_control_key_detailed/agents/: agent_runner.py
omega_control_key_detailed/core/: omega_control.py
omega_control_key_detailed/docs/: README.md
